--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <div class="panels">
     <div class="panel panel1">
       <p>text</p>
-      <p class="main__text">Take</p>
+      <p>Take</p>
       <p>text</p>
     </div>
     <div class="panel panel2">
       <p>text</p>
-      <p class="main__text">care</p>
+      <p>care</p>
       <p>text</p>
     </div>
     <div class="panel panel3">
@@ -26,12 +26,12 @@
     </div>
     <div class="panel panel4">
       <p>text</p>
-      <p class="main__text">your</p>
+      <p>your</p>
       <p>text</p>
     </div>
     <div class="panel panel5">
       <p>text</p>
-      <p class="main__text">home</p>
+      <p>home</p>
       <p>text</p>
     </div>
 
